<resources>
    <string name="app_name" translatable="false">Secret Hitler Mobile Companion</string>
    <string name="fascist">fascist</string>
    <string name="liberal">liberal</string>
    <string name="claim_nothing">nothing</string>
    <string name="legislative_session">Legislative Session</string>
    <string name="executive_action">Executive Action</string>
    <string name="policy_played">Policy Played:</string>
    <string name="rejected">" - Rejected"</string>
    <string name="vetoed">" - Vetoed"</string>
    <string name="executed_string">President %1$s selects to execute %2$s.</string>
    <string name="title_server_notification">Secret Hitler Web Server running</string>
    <string name="desc_server_notification">This notification is to improve the stability of the server.</string>
    <string name="channel_title_server_notification">Sticky Server Notification</string>
    <string name="channel_desc_server_notification">A sticky notification that improves the stability of the server</string>
    <string name="stop_server_notification">Stop Server</string>
    <string name="policypeek_string">President %1$s peeks at the next three policies and claims to see %2$s.</string>
    <string name="investigation_string">President %1$s sees the party membership of %2$s and claims to see a member of the %3$s team.</string>
    <string name="specialElection_string">President %1$s has chosen to special elect %2$s as president</string>
    <string name="deck_shuffled">Deck shuffled</string>
    <string name="CheckBox_vetoed">Policy was vetoed</string>
    <string name="vote_passed_short">Vote passed</string>
    <string name="vote_rejected_short">Vote Rejected</string>
    <string name="err_names_cannot_be_the_same">Players cannot be involved multiple times in an Event!</string>
    <string name="new_legislative_session">New Legislative Session</string>
    <string name="new_loyalty_investigation">New Loyalty Investigation</string>
    <string name="president">President</string>
    <string name="investigated">investigated</string>
    <string name="claim">Claim:</string>
    <string name="new_execution">New Execution</string>
    <string name="executed">executed</string>
    <string name="cannot_be_empty">This field cannot be empty</string>
    <string name="new_policy_peek">New Policy Peek</string>
    <string name="elected">elected</string>
    <string name="new_special_election">New Special Election</string>
    <string name="dialog_mismatching_claims_title">Mismatching claims</string>
    <string name="dialog_mismatching_claims_desc">The specified claims and the played policy do not fit together. Continue anyway?</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_server_status">Server Status:</string>
    <string name="nothing_here">Nothing here</string>
    <string name="create_new_game">Create a new game</string>
    <string name="new_event">New Event</string>
    <string name="server_status">Server Status</string>
    <string name="server_status_url"><![CDATA[Please ask your friends to scan the QR code below or enter the following URL manually: <br><b>%1$s</b><br>  Make sure that they are in the same WiFi-network as you!]]></string>
    <string name="server_status_url_disabled">When using a web server, other devices in your WiFi-network have access to the same player and event list as you do. However, only you can create events and play game sounds. Use the button below to start the server.</string>
    <string name="server_running">Running</string>
    <string name="server_stopped">Not Running</string>
    <string name="share_server_url_string">Let\'s play SecretHitler together! Open the game log by navigating to %1$s and make sure you are in the same WiFi network as I am.</string>
    <string name="share_server_url_title">Share Server URL via</string>
    <string name="server_stopping">Stopping…</string>
    <string name="server_starting">Starting…</string>
    <string name="url_copied_to_clipboard">Server URL copied to clipboard</string>
    <string name="server_status_not_connected">Not Connected</string>
    <string name="server_status_using_mobile_data">Using Mobile Data</string>
    <string name="server_status_url_not_connected">The server is running, but your device does not seem to be connected to any network. Once you have connected to WiFi or turned on mobile hotspot, this page will refresh. Use the button below to stop the server.</string>
    <string name="server_status_url_mobile_data">When using mobile data, no device will be able to access your webserver. Please either use an available WiFi Network or create a mobile hotspot. This page will refresh automatically. Use the button below to stop the server.</string>
    <string name="new_player">New</string>
    <string name="btn_ok">OK</string>
    <string name="player_name">Player name</string>
    <string name="title_input_player_name">Input Player Name</string>
    <string name="error_player_already_exists">That name already exists</string>
    <string name="new_game">New Game</string>
    <string name="new_game_description">Tip: Use the button above to add players to your game and adjust the settings below to your liking. When you\'re ready, press the blue button to start.</string>
    <string name="switch_execution">Play a sound at player execution</string>
    <string name="switch_sounds_policy">Play a sound when a policy is enacted</string>
    <string name="switch_server">Start a Game Server</string>
    <string name="switch_server_desc">A Game Server is a website accessible by everyone in your network that enables them to see the entire player and action list on their own device without installing the app.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_player_msg">This will delete player %1$s</string>
    <string name="msg_too_little_players">You currently have %1$d players. The official game requires 5 or more players. Continue anyway?</string>
    <string name="title_too_little_players">Too little players</string>
    <string name="no_players_added">No players added</string>
    <string name="no_players_added_msg">Five or more players are required. You can add more players using the button above</string>
    <string name="snackbar_GameEvent_removed_message">Event has been deleted</string>
    <string name="undo">Undo</string>
    <string name="game_ended_title">Game Ended</string>
    <string name="game_ended_who_won">To play the correct sound, please specify who has won and how.</string>
    <string name="fascists_win_policies">%1$d fascist policies enacted</string>
    <string name="fascists_won_hitler">Hitler elected chancellor</string>
    <string name="liberals_won_policies">%1$d liberal policies enacted</string>
    <string name="liberals_won_hitler">Hitler shot</string>
    <string name="sounds_end">Play a sound when the game ends</string>
    <string name="title_end_game_policies">End Game?</string>
    <string name="msg_end_game_policies_l">Five liberal policies have been played</string>
    <string name="msg_end_game_policies_f">Six fascist policies have been played</string>
    <string name="dialog_restore_title">Backup found</string>
    <string name="dialog_restore_msg">Would you like to restore it?</string>
    <string name="menu_setup_players">Players</string>
    <string name="menu_setup_track">Custom Tracks</string>
    <string name="menu_setup_sounds">Sounds</string>
    <string name="menu_setup_server">Server</string>
    <string name="hint_player_name">Player Name</string>
    <string name="add_players_explanation">Add new players using the button above</string>
    <string name="choose_from_previous_games">Or choose from previous games:</string>
    <string name="use">Use</string>
    <string name="unnamed_player_list">[Tap to rename]</string>
    <string name="includes_players">Includes the following players:</string>
    <string name="input_group_name">Input Group name</string>
    <string name="hint_player_List_name">Player List Name</string>
    <string name="snackbar_playerList_removed_message">Player List has been removed</string>
    <string name="choose_from_previous_games_empty">Player combinations from previous games will appear below</string>
    <string name="back">Back</string>
    <string name="recommended_title">Recommended Track:</string>
    <string name="official_tracks_title">Official Tracks:</string>
    <string name="custom_tracks_title">Custom Tracks:</string>
    <string name="track_56">5 – 6 players</string>
    <string name="track_910">9 – 10 players</string>
    <string name="track_78">7 – 8 players</string>
    <string name="explanation_trackSelection">Select a Fascist Track from the list below or use the Plus-Button to create a custom one.</string>
    <string name="in_use">In Use</string>
    <string name="hint_track_name">Track Name</string>
    <string name="add_track_section_basics">Basics:</string>
    <string name="add_track_section_actions">Actions:</string>
    <string name="title_execution">Execution</string>
    <string name="description_execution">The president selects to execute a player</string>
    <string name="title_policyPeek">Policy Peek</string>
    <string name="description_policyPeek">The president peeks at the next three policies</string>
    <string name="new_fascistTrack">New Fascist Track</string>
    <string name="done">Done</string>
    <string name="error_invalid_value">Invalid value</string>
    <string name="title_noAction">No Action</string>
    <string name="title_ohNo">Oh No!</string>
    <string name="message_app_crashed">Unfortunately, the app has just crashed. If you are currently in a game: Don\'t worry! Your game is backed up and you will be prompted to restore it once you restart the app!</string>
    <string name="message_app_crashed_report">However, please take your time to report this error on GitHub. We need your help to make this app better and more stable. When using the button below, a pre-filled error report will be generated for you. (Keep in mind that a GitHub account is required) Thank you very much for your help!</string>
    <string name="title_error_details">Error Details:</string>
    <string name="btn_report">Report on Github</string>
    <string name="title_game_status">Game Status:</string>
    <string name="status_election_tracker">Election Tracker:</string>
    <string name="having_issues">Having issues?</string>
    <string name="btn_disable_automatic_mode">Disable Fascist Track</string>
    <string name="server_header">Server</string>
    <string name="general_header">General</string>
    <string name="setup_header">Game Setup</string>
    <string name="autoRestore_title">Auto-restore backups</string>
    <string name="autoRestore_summary_on">When there is a backup, the game will automatically be restored on startup</string>
    <string name="autoRestore_summary_off">The user will be prompted to restore a backup if one exists</string>
    <string name="port_title">Custom server port</string>
    <string name="fascistTrack_title">Fascist Track</string>
    <string name="fascistTrack_summary_on">By default, the Fascist Track feature will be turned on</string>
    <string name="fascistTrack_summary_off">By default, the Fascist Track feature will be turned off</string>
    <string name="server_title">Server</string>
    <string name="server_summary_on">By default, the Web Server will be turned on</string>
    <string name="server_summary_off">By default, the Web Server will be turned off</string>
    <string name="sounds_title">Sounds</string>
    <string name="sounds_summary_on">By default, all sounds will be played</string>
    <string name="sounds_summary_off">By default, no sounds will be played</string>
</resources>