<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_game_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_title_gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_game_status"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_fpolicy"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_gameStatus"
        app:srcCompat="@drawable/icon_fpolicy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/img_lpolicy"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_gameStatus"
        app:srcCompat="@drawable/icon_lpolicy" />

    <TextView
        android:id="@+id/tv_fpolicies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_fpolicy"
        app:layout_constraintEnd_toEndOf="@+id/img_fpolicy"
        app:layout_constraintStart_toStartOf="@+id/img_fpolicy"
        app:layout_constraintTop_toTopOf="@+id/img_fpolicy" />

    <TextView
        android:id="@+id/tv_lpolicies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_lpolicy"
        app:layout_constraintEnd_toEndOf="@+id/img_lpolicy"
        app:layout_constraintStart_toStartOf="@+id/img_lpolicy"
        app:layout_constraintTop_toTopOf="@+id/img_lpolicy" />

    <TextView
        android:id="@+id/tv_electionTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/status_election_tracker"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_fpolicy" />

    <TextView
        android:id="@+id/tv_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/having_issues"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_electionTracker" />

    <Button
        android:id="@+id/btn_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_report"
        app:icon="@drawable/github_logo"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/tv_issues" />

    <Button
        android:id="@+id/btn_enable_manual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_disable_automatic_mode"
        app:layout_constraintBottom_toBottomOf="@+id/btn_report"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_report" />
</androidx.constraintlayout.widget.ConstraintLayout>